Fix headings in compact mode which should be truncated text
Use !important rather than specific rules to make clear what we
are overriding.
Styling of headings is broken in compact mode without this fix.

--- a/modules/new/styles/board/topic/titlebar.less
+++ b/modules/new/styles/board/topic/titlebar.less
@@ -28,13 +28,15 @@
 	}
 }
 
+
+
 .flow-moderated-topic-title,
-// Override default Vector styles
-div#content h2.flow-topic-title {
+.flow-topic-title {
 	padding: 0;
-	margin: 0 2.5em .33em 0;
 	border-bottom: none;
-	font-family: sans-serif;
+	// @todo: !important needed to override default Vector styles on div#content h2
+	margin: 0 2.5em .33em 0 !important;
+	font-family: sans-serif !important;
 	font-weight: bold;
 	word-break: break-word;
 	word-wrap: break-word;
